--- a/src/App.scss
+++ b/src/App.scss
@@ -1,41 +1,151 @@
+
+$max-width-content: 1200px;
+$body-background-color: #fafafa;
+
 :root {
-  --header-height: 50px;
+  --header-height: 60px;
   --side-view-width: 400px;
   --video-list-item-height: 80px;
   --default-padding: 10px;
 }
 
+
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+body {
+  background-color: $body-background-color;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  position: relative;
+  color: steelblue;
+  font-family: inherit;
+  padding: 0.5rem;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  background: none;
+  transition: background-color 0.3ms ease-in-out;
+}
+
+button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ebebeb;
+  border-radius: 5px;
+  transition: opacity 0.3ms ease-in-out;
+  opacity: 1;
+  z-index: -1;
+}
+
+button[disabled] {
+  color: grey;
+  cursor: initial;
+}
+
 header {
+  position: relative;
+  width: 100vw;
   height: var(--header-height);
+  padding: 10px;
+  background-color: white;
+  box-shadow: 0 2px 13px 0 rgb(0 0 0 / 20%);
+  margin-bottom: 1rem;
+}
+
+.header-flex-container {
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+}
+
+.youtube-year-selector {
+  padding-left: 0.75rem;
+  border: none;
+  border-bottom: 2px solid black;
+  color: black;
+  font-size: 2rem;
+  border-radius: 0;
+  font-weight: bold;
+  margin-bottom: -0.25rem;
+  background-color: $body-background-color;
+}
+
+.youtube-year-selector-label {
+  margin-right: 0.5rem;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.youtube-year-selector-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 3rem;
+}
+
+.user-avatar {
+  min-height: 30px;
+  min-width: 30px;
+  max-height: 30px;
+  max-width: 30px;
+  overflow: hidden;
+  border-radius: 100px;
+  margin-right: 0.25rem;
+}
+
+.user-avatar.large {
+  min-height: 40px;
+  min-width: 40px;
+  max-height: 40px;
+  max-width: 40px;
+
+}
+
+.header-user-profile-link {
+  height: 30px;
+  width: 30px;
+}
+
+.auth-information {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo-and-label-container {
-  height: 60%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-family: 'Athiti', sans-serif;
 }
 
 .App-logo {
   height: 100%;
   object-fit: contain;
-}
-
-.App {
-  max-width: 1200px;
-  margin: 0 auto;
+  border-radius: 100px;
+  overflow: hidden;
+  margin-right: 0.5rem;
 }
 
 main {
-  display: grid;
-  grid-auto-flow: row;
-  grid-template-columns: 1fr var(--side-view-width);
-  grid-template-rows: calc(100vh - var(--header-height));
+  max-width: $max-width-content;
+  margin: 0 auto 300px auto;
   width: 100%;
 }
 
@@ -48,7 +158,7 @@ main {
   overflow-y: scroll;
   overflow-x: hidden;
   width: 100%;
-  height: 640px;
+  max-height: 320px;
   border: 1px solid lightgray;
   box-sizing: border-box;
 }
@@ -68,25 +178,74 @@ main {
 }
 
 .creator-info-box {
-  background-color: gray;
+  background-color: #dbdbcc;
   padding: 10px;
   width: 100%;
-  box-sizing: border-box;
+}
+
+.collapse:not(.show) {
+  display: none;
+}
+
+.collapsing {
+  height: 0;
+  overflow: hidden;
+  transition: height 0.35s ease;
+}
+@media (prefers-reduced-motion: reduce) {
+  .collapsing {
+    transition: none;
+  }
+}
+.collapsing.collapse-horizontal {
+  width: 0;
+  height: auto;
+  transition: width 0.35s ease;
+}
+@media (prefers-reduced-motion: reduce) {
+  .collapsing.collapse-horizontal {
+    transition: none;
+  }
+}
+
+@-moz-keyframes spin {
+  100% { -webkit-transform: rotate(90deg); transform:rotate(90deg); }
+}
+@-webkit-keyframes spin {
+  100% { -webkit-transform: rotate(90deg); transform:rotate(90deg); }
+}
+@keyframes spin {
+  100% { -webkit-transform: rotate(90deg); transform:rotate(90deg); }
+}
+
+.rotate-90 {
+  transform: rotate(90deg);
 }
 
 .creator-info-box-header {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: flex-start;
   height: 80px;
 }
 
-.creator-info-box-header > img {
+.creator-info-box-header img {
   height: 100%;
   width: 80px;
   object-fit: cover;
   margin-right: 5px;
+  border-radius: 25px;
+  border: 3px solid white;
+  box-shadow: 0 0 0 1px rgb(198 198 198);
+}
 
+.creator-info-box-channel-details {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  height: 100%;
 }
 
 input {
@@ -149,6 +308,21 @@ input:hover {
   }
 }
 
+.watch-video-view {
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-columns: 1fr var(--side-view-width);
+  grid-template-rows: calc(100vh - var(--header-height));
+}
+
+.startpage {
+  padding: 2rem;
+}
+
+.black-link {
+  color: black;
+}
+
 #full-stars-example-two {
 
   display: inline;
@@ -176,29 +350,98 @@ input:hover {
 
   /* set icon padding and size */
   .rating__label {
-    cursor: pointer;
     padding: 0 0.1em;
     font-size: 1.5rem;
   }
 
   /* set default star color */
   .rating__icon--star {
-    color: red;
+    color: #d30000;
   }
 
   /* if any input is checked, make its following siblings grey */
   .rating__input:checked ~ .rating__label .rating__icon--star {
     color: #ddd;
   }
+  .rating-group:not(.disabled):hover .rating__label{
+    cursor: pointer;
+  }
+
 
   /* make all stars orange on rating group hover */
-  .rating-group:hover .rating__label .rating__icon--star {
+  .rating-group:not(.disabled):hover .rating__label .rating__icon--star {
     color: red;
   }
 
   /* make hovered input's following siblings grey on hover */
-  .rating__input:hover ~ .rating__label .rating__icon--star {
+  .rating__input:not(.disabled):hover ~ .rating__label .rating__icon--star {
     color: #ddd;
+  }
+}
+
+.video-thumbnail-renderer-overlay  {
+  position: relative;
+  aspect-ratio: 16/9;
+  width: 100%;
+  overflow: hidden;
+
+  img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  img:hover {
+    transform: scale(1.05);
+  }
+
+  .image-overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, black 100%);
+  }
+
+  .image-overlay:hover {
+  }
+
+
+
+  .video-thumbnail-details {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color: white;
+    padding: 0.375rem;
+    text-shadow: black 0px 1px 2px;
+  }
+
+  .video-length-and-title-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .video-length {
+    background-color: rgba(213, 213, 213, 0.56);
+    border-radius: 3px;
+    padding: 0 0.125rem;
+    max-width: 6ch;
+  }
+
+  .video-thumbnail-title {
+
+  }
+
+  .channel-title {
+    font-size: 0.75rem;
   }
 }
 
