--- a/src/styles/commentSectionStyle.scss
+++ b/src/styles/commentSectionStyle.scss
@@ -5,9 +5,8 @@
 .comment-section-pagination {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  width: 80px;
   margin: 0 auto;
 
   .page-number {
