--- a/src/styles/videoGridStyles.scss
+++ b/src/styles/videoGridStyles.scss
@@ -12,6 +12,8 @@
 
 .video-grid-element {
   position: relative;
+  box-shadow: -1px 4px 11px 0 rgb(0 0 0 / 30%);
+  transition: transform 0.2s ease-in-out;
 
   .image-container {
     aspect-ratio: 16/9;
@@ -24,18 +26,14 @@
       object-fit: cover;
       transition: transform 0.3s ease-in-out;
     }
-
-    img:hover {
-      transform: scale(1.05);
-    }
   }
-
 }
 
-.video-grid-element-hero {
-  grid-column: span 2;
-  grid-row: span 2;
+.video-grid-element:hover {
+  transform: scale(1.02);
 }
+
+
 
 .video-recommendation-section-title {
   margin-bottom: 2rem;
