--- a/src/styles/commentSectionStyle.scss
+++ b/src/styles/commentSectionStyle.scss
@@ -10,7 +10,7 @@
   margin: 0 auto;
 
   .page-number {
-    margin: 0 0.125rem;
+    margin: 0 2rem;
   }
 }
 
@@ -24,6 +24,7 @@
   display: block;
   resize: none;
   font-family: inherit;
+  font-size: 1rem;
   padding: 0.375rem;
   margin-bottom: 0.5rem;
   border-radius: 5px;
